
LZMA Utils user visible changes
===============================

Version 4.32.3

  Seems that everything started going wrong once I started calling
  this "stable" instead of "beta".

  * Copy ownership and permissions before closing the output file.
    Fixes <http://qa.mandriva.com/show_bug.cgi?id=35309>.

  * Make "lzma -c foo.lzma" and "lzma -dc foo" work i.e. don't check
    that the filename suffix when writing to standard output.

  * Added a copy of GNU GPLv3. It applies only to some files in the
    "tests" directory. The rest of LZMA Utils will stay under the
    older licenses.

Version 4.32.2

  * Doesn't fail with every file anymore.

Version 4.32.1

  * Explicitly check that closing the output file succeeds.
    Fixes a rare but possible silent data loss.
  
  * Close stdout and stderr and check that those operations succeed.
    Again, fixes a rare but possible silent data loss.
  
  * Some help message, documentation, and typo fixes to various places.

  * Added replacement function for GNU getopt_long(). This should make
    the command line tool build on a few more operating systems.
